Update Laboratorio 2 - Alquiler de Bicicletas.ipynb

--- a/Laboratorio 2 - Alquiler de Bicicletas.ipynb
+++ b/Laboratorio 2 - Alquiler de Bicicletas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Laboratorio 2 – Proyecto de Predicción de Predicción de Bicicletas\n",
+    "### Laboratorio 2 – Proyecto de Predicción de Bicicletas\n",
     "\n",
     "En esta sección ud. estará a cargo de evaluar como se puede realizar la predicción de bicicletas de un local de alquiler.  Como científico de datos tiene la labor de predecir la siguiente demanda del local por medio de un modelo de machine learning utilizando scikit-learn."
    ]
